# ros2_workspace

notebooks/: xfeat+lg_torch_hub.ipynb
src/: lidar_dr.tgz  雷达使用说明.txt
src/Lslidar_ROS2_driver-CH128X1_V1.0/params/: lslidar_ch.yaml
src/Lslidar_ROS2_driver-CH128X1_V1.0/src/: lslidar_driver.cpp
src/pointcloud_publisher/: package.xml  setup.py
src/pointcloud_publisher/install/pointcloud_publisher/lib/pointcloud_publisher/: pointcloud_publisher
src/pointcloud_publisher/install/pointcloud_publisher/share/pointcloud_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/pointcloud_publisher/pointcloud_publisher/: pointcloud_publisher.py
src/ridar_detection_client/: package.xml  setup.cfg  setup.py
src/ridar_detection_client/ridar_detection_client/: ridar_detection_client.py
src/ridar_detection_service/: package.xml  setup.cfg  setup.py
src/ridar_detection_service/config/: config1.json
src/ridar_detection_service/ridar_detection_service/: 4PCS_ICP.py  ridar_detection3.py  ridar_detection3_back.py  ridar_detecton_origin.py
src/ridar_service_interface/: CMakeLists.txt  package.xml
src/ridar_service_interface/srv/: DetectPointCloud.srv
